Partie appTour finie

--- a/rapport.tex
+++ b/rapport.tex
@@ -70,7 +70,7 @@ Durant mon alternance, j'ai eu plusieurs mission toutes orientées sur les  appl
 C'était une première expérience en tant qu'apprenti dans une entreprise, cela m'a permis d'acquérir des nouvelles méthodes de travail comme l'agilité et de plus j'ai pu travaillé sur des des concepts innovants ainsi qu'utiliser des technologies et outils actuels.\newline
 
 
-Dans un premier temps, j'établirai une bref présentation du service informatique du rectorat en présentant les multiples pôles qui existent et son organisation. Puis je présenterai plus en détail les objectifs de mon alternance ainsi que les méthodologies de gestion de projet que j'ai suivies et les outils que j'ai utilisés. Enfin j'expliquerai les travaux réalisés dans ma mission et je conclurai avec un bilan de mon alternance.
+Dans un premier temps, j'établirai une brève présentation du service informatique du rectorat en présentant les multiples pôles qui existent et son organisation. Puis je présenterai plus en détail les objectifs de mon alternance ainsi que les méthodologies de gestion de projet que j'ai suivies et les outils que j'ai utilisés. Enfin j'expliquerai les travaux réalisés dans ma mission et je conclurai avec un bilan de mon alternance.
 
 \newpage
 
@@ -117,18 +117,18 @@ L’équipe de développement du pôle DINAMO est constituée d’Arnaud Rupin, 
 \subsection{Méthodes de travail}
 \subsubsection{Méthodologie agile}
 
-les nouveaux projets de l'équipe DINAMO fonctionnent en méthodologie agile sous forme de sprints qui varie de 2 à 4 semaines. Chaque équipe effectue un Daily-meeting afin d'échanger sur l'évolution des tâches à faire.
+Les nouveaux projets de l'équipe DINAMO fonctionnent en méthodologie agile sous forme de sprints qui varient de 2 à 4 semaines. Chaque équipe effectue un Daily-meeting afin d'échanger sur l'évolution des tâches à faire.
 
-Durant un sprint, l'équipe embarque des nouvelles \textbf{User Story}\footnotemark. et réalise des nouvelles fonctionnalités ou corriger les erreurs et les bugs rencontrés lors des démos. Le lancement de chaque sprint se fait lors d'une réunion \textbf{sprint planning} dans laquelle toute l'équipe du projet est présente ainsi que le client. Ce dernier désigne les nouvelles \textbf{User Story} et des nouvelles fonctionnalités qu'il souhaite qu'elles soient rajoutées ou corrigées dans la prochaine version de l'application. 
+Durant un sprint, l'équipe embarque des nouvelles \textbf{User Story}\footnotemark et réalise des nouvelles fonctionnalités ou corrige les erreurs et les bugs rencontrés lors des démos. Le lancement de chaque sprint se fait lors d'une réunion \textbf{sprint planning} dans laquelle toute l'équipe du projet est présente ainsi que le client. Ce dernier désigne les nouvelles \textbf{User Story} et les nouvelles fonctionnalités qu'il souhaite voir rajoutées ou corrigées dans la prochaine version de l'application. 
 \footnotetext{Un récit utilisateur, ou « user story »  en anglais, est une description simple d’un besoin ou d’une attente exprimée par un utilisateur et utilisée dans le domaine du développement de logiciels et de la conception de nouveaux produits pour déterminer les fonctionnalités à développer.}.
 
-Durant mon alternance, j'ai eu la chance d'être inviter par mes maîtres d'alternances à assister plusieurs réunions des autres projets afin de voir le déroulement d'un projet agile. j'ai pu assister à un sprint planning, une rétrospective et une démo...    
+Durant mon alternance, j'ai eu la chance d'être invité par mes maîtres d'alternance à assister à plusieurs réunions d'autres projets afin de voir le déroulement d'un projet agile. J'ai pu assister à un sprint planning, une rétrospective , une démo, etc...    
 
-Dans mon cas, j'étais le seul développeur dans mon projet, je faisais un Daily-meeting  tous les jours avec mes maîtres d'alternances pour que je puisse dire sur quoi je travaillais et leurs poser des questions en cas de blocages. L'administrateur des systèmes d'informations(ADSI) JOSSO Clément, qui est en même temps le Product Owner(PO) du projet, et mes maîtres d'alternances me conseillaient sur l'ordre des tâches à suivre lors des multiples réunions.   
+Dans mon cas, j'étais le seul développeur dans mon projet, je faisais un Daily-meeting avec mes maîtres d'alternance pour que je puisse dire sur quoi je travaillais et leurs poser des questions en cas de blocages. L'administrateur des systèmes d'informations(ADSI) Clément JOSSO, qui est en même temps le Product Owner(PO) du projet, et mes maîtres d'alternances me conseillaient sur l'ordre des tâches à suivre lors des multiples réunions.   
 
 \subsubsection{Communication}
 
-Pour communiquer, l'équipe informatique utilise l'outil de messagerie instantané Rocket.Chat. Il permet de créer différents
+Pour communiquer, l'équipe informatique utilise l'outil de messagerie instantanée Rocket.Chat. Il permet de créer différents
 channels pour chaque équipe, des channels de veille ont été également crées pour de la veille technologique.
 
 Nous utilisons aussi l'outil Calendar (un outil développé par Oracle) qui permet d’organiser les réunions.  
@@ -138,9 +138,9 @@ Nous utilisons aussi l'outil Calendar (un outil développé par Oracle) qui perm
 Le logiciel Docker permet de créer, déployer et exécuter des conteneurs de manière efficace. Un conteneur enveloppe l’application d’un logiciel dans une boîte invisible avec tout ce dont il a besoin pour s’exécuter.
 
 
-Dans le pôle DINAMO, l'équipe utilise Docker Compose pour partager le même environnement de travail entre plusieurs personne et tout installer sur docker. Docker Compose est un outil qui permet de décrire et gérer  plusieurs conteneurs comme un ensemble des services inter-connectés.
+Dans le pôle DINAMO, l'équipe utilise Docker Compose pour partager le même environnement de travail entre plusieurs personnes et tout installer sur docker. Docker Compose est un outil qui permet de décrire et gérer  plusieurs conteneurs comme un ensemble des services inter-connectés.
 
-Dans les projets sur lesquelles j'ai travaillés, nous avons utilisé Docker-compose pour déclarer tout les conteneurs dont nous avons besoin dans un fichier .yml  et nous démarrons l'ensemble des conteneurs en une seule commande \textbf{docker-compose up}. 
+Dans les projets sur lesquels j'ai travaillés, nous avons utilisé Docker Compose pour déclarer tous les conteneurs dont nous avons besoin dans un fichier .yml  et nous démarrons l'ensemble des conteneurs en une seule commande \textbf{docker-compose up}. 
 
 Dans le fichier docker-compose.yml, chaque conteneur est décrit avec un ensemble de paramètres qui correspondent aux options disponibles lors d’un docker run : l’image à utiliser, les volumes à monter, les ports à ouvrir...
  
@@ -395,17 +395,18 @@ Le Back-end AppTour, c’est la partie du code qui est exécutée par le serveur
 
 L'architecture du Web service AppTour est similaire avec les nouveaux Webs services implémentés par le pôle Dinamo, j'ai essayé de respecter cette architecture pendant mon développement. 
 
-Le Back-en Apptour se décompose de plusieurs couches: \newline
+Le Back-end Apptour se décompose de plusieurs couches: \newline
 
 - Une couche Model: Cette couche représente le modèle de données objet de l'application. \newline
 
 - Une couche Repository/DAO: Repositories sont des interfaces héritant de l'interface Repository. L'objectif de ces interfaces consiste à rendre la création de la couche d'accès aux données (requêtes SELECT, UPDATE...) plus rapide. Cette couche s'appuie sur l'interface JPA (Java Persistence API) qui permet la persistance des données.\newline
 
 
-- Une couche Service: Cette couche implémente l'ensemble de la logique métier de l'applicationn. Elle s'appuie sur les couches DAO et model pour effectuer des opérations CRUD (Create, Research, Update, Delete) sur des objets persistés et leur appliquer ensuite des traitements métier.\newline
+- Une couche Service: Cette couche implémente l'ensemble de la logique métier de l'applicationn. Elle s'appuie sur les couches DAO et model pour effectuer des opérations CRUD (Create, Read, Update, Delete) sur des objets persistés et leur appliquer ensuite des traitements métier.\newline
 
 
 - Une couche Controller: Il s'agit de l'API qui permet de répondre à toutes les requêtes envoyées par le client. 
+
 
 
 \begin{figure}[H]
@@ -415,7 +416,13 @@ Le Back-en Apptour se décompose de plusieurs couches: \newline
 	\end{figure}
 	
 
+Voici le cycle  d'appel de l'application Solycee au web Service Apptour:  
 
+\begin{figure}[H]
+	\centering
+ 		\includegraphics[width=1\textwidth]{diagrammes/schema_apptour.png}
+  		\caption{Cycle d'une demande de ressources}
+	\end{figure}
 
 \subsubsection{Aspect technique}
 
@@ -459,60 +466,63 @@ Il permet une Analyse automatisée en l’integrant dans d’autres serveurs de 
 
 • Évaluation de la couverture du code par les tests unitaires.
 
-• Détection des bugs et des duplications des codes.\newline
+• Détection des bugs et des duplications des codes.
  
 \subsubsection{Travail réalisé}
+
+Dans le projet AppTour, j'ai travaillé sur la réalisation d'une API Rest, j'ai développé plusieurs endPoints qui permets de rajouter ou modifier les étapes des tours ainsi que faire des recherches pour vérifier l’existence des tours. 
+
+Comme noté plus haut, le projet AppTour était initialisé par l'alternant, il a initialisé le projet avec la création des tables Tour et Step. j'ai commencé donc par la relecture du code existant et la modification des tables.Ensuite, Nous avons travaillés avec mes maîtres d'alternance sur l'architecture du projet.
+
+Une fois que le code et le travail demandé était compris et acquis, j'ai commencé par implémenter du code nécessaire pour réaliser les endPoints dont nous en avons besoin. Voici une présentation plus précise de toutes les tâches réalisées:   
+
 \textbf{(TODO)!!!}\newline
-Dans le projet AppTour, j'ai travaillé sur la réalisation d'une API Rest, j'ai développé plusieurs EndPoints qui permets de rajouter ou modifier les étapes des tours ainsi que faire des recherches pour vérifier l’existence des tours. 
-
-Comme noté plus haut, le projet AppTour était initialiser par l'alternant de l'année dernière en créant les tables (Entity). Il existait deux tables, une table Tour et une table Step. j'ai commencé donc par la relecture du code existant et la modification des tables.
-Ensuite, Nous avons travaillés avec mes maîtres d'alternance sur l'architecture du projet.
-
-Une fois que le code et le travail demandé était compris et acquis, j'ai commencé par implémenté du code nécessaire pour réaliser les web services dont nous en avons besoin. Voici une présentation plus précise de toutes les tâches réalisées:   
-
 \begin{itemize}
 
-\item rajouter des éléments dans les tables par exemple Storage dans l'entité Tour qui est un booléen et qui permet de configurer si on veut stocker les tours dans l'historique ou pas ou encore la variable Ordre dans l'entité Step qui un entier et qui permet de donner un ordre pour chaque step.  
+\item J'ai commencé par complémenter les tables Tour et Step en rajoutant des nouveaux élément comme Storage dans l'entité tour qui permet de garder les tours exécutés dans l'historique ou pas en mettant l’attribut Storage à True ou False. 
+
+Rajouter aussi l'attribut Ordre dans la table Step pour donner un ordre d’exécution des étapes de Bootstrap Tour. 
+  
+  
+
 \item Créer toutes les classes DTO afin de les utiliser dans les requêtes  pour envoyer ou récupérer des données.
 
-\item Implémenter les classes Repositories qui permettent de faciliter l'accès  ou le stockage des données dans la base.
+\item Rajouter les classes Repositories en utilisant l'interface JpaRepository qui permettent de faciliter l'accès ou le stockage des données dans la base.
 
-\item Créer des classe Mapper qui permettent de convertir un objet Dto à un objet normal ou l'inverser. Par exemple passer d'un objet TourDto à un objet Tour il suffit d'appeler la méthode tourDtoToTour et qui prend en paramètre un objet tourDto : TourDto.  
+\item Créer des classes Mapper qui permettent de convertir un objet Dto à un objet normal ou l'inverser. Par exemple passer d'un objet TourDto à un objet Tour il suffit d'appeler la méthode tourDtoToTour et qui prend en paramètre un objet tourDto : TourDto.  
 
- \begin{figure}[H]
-	\centering
- 		\includegraphics[width=1\textwidth]{diagrammes/Exemple_tourDtoToTour.png} 
-  		\caption{Exemple d'une méthode de la classe TourMapper}
-	\end{figure}
-
-\item La réalisation de l'API et tout les services Web, il s'agit d’implémenter des classes contrôllers qui consomme toute les méthodes qui se trouvent dans les classes services. Il existe plusieurs types de services web: 
+\item La réalisation de l'API et tous les EndPoints, il s'agit d’implémenter des classes controllers qui consomme toute les méthodes qui se trouvent dans les classes services. Il existe plusieurs types de EndPoints: 
 \begin{itemize}
-\item Des méthodes GET : Pour la récupération des données de la base dans le cas où elles existent. Par exemple "retrieveTourByIdHtmlPage" ou encore "getStepByElementandIdTour".
+\item Des méthodes GET : Pour la récupération des données de la base dans le cas où elles existent.
 
-\item Des méthodes POST : Pour stocker des nouveaux objets dans la bas de données. Par exemple "saveTour" ou encore "saveNewStep".
+\item Des méthodes POST : Pour stocker des nouveaux objets dans la bas de données.
 
-\item Des méthodes PUT : Pour mon projet, j'ai du m’en servir  d'une méthode "updateStep" qui permet au utilisateurs de modifier une étapes qui existe déjà.
+\item Des méthodes PUT : Permettre aux ADSI de modifier la documentation déjà existante. 
 
 \end{itemize}
-\item L'implémentation des classes Services: Toutes les actions effectuer le contrôller doivent passer par les classes services. 
+\item L'implémentation des classes Services: Toutes les actions effectuer par le controller doivent passer par les classes services. 
 
 Il existe une classe TourService: Dans cette classe, j'ai réalisé plusieurs méthodes qui permettent à stocker ou récupérer des Tours de la base données : 
 \begin{itemize}
-\item  retrieveTourByLibelleAndIdHtmlPage : Elle permet à récupérer un tour en passant en paramètre nom d'une application et l'identifiant de la page HTMl. 
+\item Chercher un Tour : Elle permet à récupérer un tour en passant en paramètre nom d'une application et l'identifiant de la page HTMl. 
 
-\item saveTourWithLibelleAndIdHtmlPage : Elle permet à stocker un tour dans la base de données en donnant le nom de l'application et l'Id de la page HTML. 
+\item Sauvegarder un Tour dans la base de données : Elle permet à stocker un tour dans la base de données en donnant le nom de l'application et l'Id de la page HTML. 
 
-\item updateTour : Elle permet à modifier un tour existant dans la base données en donnant des nouveaux paramètres. 
+\item Modifier un Tour : Elle permet à modifier un tour existant dans la base données en donnant des nouvelles variables. 
 \end{itemize}
 
 Il existe aussi une classe StepService : Dans cette classe, j'ai réalisé plusieurs méthodes qui permettent à stocker ou récupérer des Step de la base données : 
 \begin{itemize}
 
-\item  findStepByElementandIdTour : Elle permet de récupérer un Step en passant en paramètre l'élément rechercher et l'identifiant du tour.
+\item  Chercher une étape: Récupérer un Step en passant en paramètre l'élément rechercher et l'identifiant du tour.
 
-\item saveStep : Elle permet à stocker un Step dans la base de données.
+\item Sauvegarder une étape : Stocker un Step dans la base de données.
 
-\item findOrdreMax : Elle permet de lister tout les step d'un tour par ordre croissant.  
+\item Lister tout les step d'un tour par ordre croissant.  
+
+
+J'ai aussi créé une table Personnel pour pouvoir l'alimenter par les ADSI des applications de rectorat. Le but final était de pouvoir identifier si la personne connectée sur Solycee est un ADSI ou pas afin d'avoir le droit d'accéder au mode édition de Solycee. 
+
 \end{itemize}
 \end{itemize}
 \subsection{Partie Sécurité}
@@ -554,5 +564,6 @@ En suite, j'ai fait des recherches pour trouver une libraire JavaScript qui perm
 
 \newpage
 \section{Annexes}
+
 
 \end{document}
